# rust-sdk

./: README.md
.github/workflows/: rust.yml
agixt-sdk/: .gitignore  Cargo.toml  LICENSE  README.md
agixt-sdk/.github/workflows/: ci.yml
agixt-sdk/src/: error.rs  lib.rs
agixt-sdk/src/client/: agents.rs  conversations.rs  mod.rs  providers.rs
agixt-sdk/src/models/: mod.rs
agixt-sdk/tests/: integration_tests.rs
