[package]
name = "agixt-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for AGiXT"
authors = ["AGiXT Team"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
chrono = "0.4"
url = "2.4"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
mockito = "1.0"
